src/objects/TeacherSuccess__c.object
<CustomObject>
    <description>Contains information about student disposition concerns, field concerns and cohort seminar. This object contains sensative student information and should only be available to a limited number of profiles (Teacher Success, Student Services, etc).</description>
    <fields>
        <fullName>ActionTaken__c</fullName>
        <label>Action Taken</label>
        <picklist>
            <picklistValues>
                <fullName>No warning issued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 1 warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2 warning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3: conditional continuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3: removal from program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Extended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>File for Records</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn from DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal conditionally approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseled out of Licensure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DispositionType__c</fullName>
        <label>Disposition Type</label>
        <picklist>
            <picklistValues>
                <fullName>Academic Authenticity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unprofessional Behavior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy / Procedures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counseled Out of Licensure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FollowUpDate__c</fullName>
        <label>Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolvedDate__c</fullName>
        <label>Resolved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StudentConcern__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Concern</label>
        <referenceTo>StudentDisposition__c</referenceTo>
        <relationshipLabel>Teacher Success</relationshipLabel>
        <relationshipName>Teacher_Success</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudentFirstName__c</fullName>
        <formula>Student__r.FirstName</formula>
        <label>Student First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentLastName__c</fullName>
        <formula>Student__r.LastName</formula>
        <label>Student Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StudentSFID__c</fullName>
        <formula>Student__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teacher Success</relationshipLabel>
        <relationshipName>TeacherSuccess</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubmittedBy__c</fullName>
        <label>Submitted By</label>
        <picklist>
            <picklistValues>
                <fullName>Grader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Course Mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinical Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort Facilitator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Principal / Asst. Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TSActionTaken__c</fullName>
        <description>Picklist value that allows users to select what action was taken for the teach success process.</description>
        <label>TS Action Taken</label>
        <picklist>
            <picklistValues>
                <fullName>Appeal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Conditionally Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed DT – Performance Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed DT – Disposition Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed DT – Personal Issues/Stress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawal Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TSCohort__c</fullName>
        <label>TS Cohort</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan	15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sep	15</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TeacherSuccessStatus__c</fullName>
        <label>Teacher Success Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Open: Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: Student Response Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open: WGU Response Needed / In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeOfTSFieldConcern__c</fullName>
        <description>Picklist field that allows users to select the type of field concern.</description>
        <label>Type of TS Field Concern</label>
        <picklist>
            <picklistValues>
                <fullName>Appeals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Absences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Environment/Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HT Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson Planning or Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional/Reflective Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Mentor Recommend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Concerns in the Field</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWS/TPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TypeofFieldConcern__c</fullName>
        <label>Type of Field Concern</label>
        <picklist>
            <picklistValues>
                <fullName>Absences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal for 3rd Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appeal To Repeat DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Environment and Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cohort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaborative Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-CS Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-HT Conflict</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT-Personal Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ethical Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lesson Presentation/Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Observation Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PCE Problems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placement Concerns during DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preappeal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reflective Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Watch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Mentor Recommend</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Teacher Success</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ActionTaken__c</columns>
        <columns>TypeofFieldConcern__c</columns>
        <columns>ResolvedDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Field_Concerns_No_Status</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>equals</operation>
        </filters>
        <label>P-Field Concerns-TS Status Empty</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Field_Concerns_Open</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TSCohort__c</columns>
        <columns>SubmittedBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>notEqual</operation>
            <value>Resolved</value>
        </filters>
        <label>All Field Concerns-Open</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Field_Concerns_TS_Action_Taken_Empty</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TSActionTaken__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <label>P-Field Concerns-TS Action Taken Empty</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_TS_Open_Concerns1</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>notEqual</operation>
            <value>Resolved</value>
        </filters>
        <label>All TS Open Concerns</label>
        <sharedTo>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DispositionConcern</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>DispositionType__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSCohort__c</columns>
        <columns>ActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.DispositionConcern</value>
        </filters>
        <label>All Disposition Concerns</label>
        <sharedTo>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FieldConcern</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <label>All Field Concerns</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Concern_My_Open_Objects</fullName>
        <columns>NAME</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>SubmittedDate__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>Student__c</columns>
        <columns>TSCohort__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>TypeofFieldConcern__c</columns>
        <columns>ActionTaken__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Resolved</value>
        </filters>
        <label>Field Concern--My Open Objects</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Concerns_Resolved_Date_wo_Status</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TSCohort__c</columns>
        <columns>SubmittedBy__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>notEqual</operation>
            <value>Resolved</value>
        </filters>
        <filters>
            <field>ResolvedDate__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>P-Field Concerns-Resolved Date wo Status</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Concerns_for_Blake</fullName>
        <columns>NAME</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TSCohort__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>blake.b</value>
        </filters>
        <label>Field Concerns for Blake</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Field_Concerns_for_Watch_Jan2014</fullName>
        <columns>NAME</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>TSCohort__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TypeOfTSFieldConcern__c</field>
            <operation>equals</operation>
            <value>Watch</value>
        </filters>
        <filters>
            <field>TSCohort__c</field>
            <operation>equals</operation>
            <value>Jan	14</value>
        </filters>
        <label>Field Concerns for Watch-Jan2014</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_Field_Concerns_for_Susie_and_Sarah</fullName>
        <columns>NAME</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TSCohort__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>notEqual</operation>
            <value>Complete,Resolved</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>swoodwo,srichar</value>
        </filters>
        <label>Open Field Concerns for Susie and Sarah</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>z_All_Field_Concerns_Resolved</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>FollowUpDate__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>SubmittedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TSCohort__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>StudentSFID__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TeacherSuccessStatus__c</field>
            <operation>equals</operation>
            <value>Resolved</value>
        </filters>
        <label>z-All Field Concerns-Resolved</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>z_All_Field_Concerns_observations</fullName>
        <columns>NAME</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>TeacherSuccessStatus__c</columns>
        <columns>TSActionTaken__c</columns>
        <columns>ResolvedDate__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>TSCohort__c</columns>
        <columns>SubmittedBy__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TypeOfTSFieldConcern__c</field>
            <operation>equals</operation>
            <value>Observation Forms</value>
        </filters>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>notEqual</operation>
            <value>debra.n</value>
        </filters>
        <label>z-All Field Concerns-observations</label>
        <sharedTo>
            <group>SRMSupport</group>
            <group>TeacherSuccess</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>z_Field_Concerns_fix</fullName>
        <columns>NAME</columns>
        <columns>Student__c</columns>
        <columns>TypeOfTSFieldConcern__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>TSCohort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TeacherSuccess__c.FieldConcern</value>
        </filters>
        <filters>
            <field>TSCohort__c</field>
            <operation>equals</operation>
            <value>Sep	12,Jan	13</value>
        </filters>
        <label>z- Field Concerns fix</label>
        <sharedTo>
            <role>TeacherSuccess</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Teacher Success Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teacher Success</pluralLabel>
    <recordTypes>
        <fullName>DispositionConcern</fullName>
        <active>true</active>
        <label>Disposition Concern</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieldConcern</fullName>
        <active>true</active>
        <label>Field Concern</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FieldConcernResolvedDate</fullName>
        <active>true</active>
        <description>Require the Resolved date to be completed if the status is Resolved</description>
        <errorConditionFormula>AND ( 
RecordType.Name=&quot;Field Concern&quot;, 
ISPICKVAL(TeacherSuccessStatus__c, &quot;Resolved&quot;), 
ISBLANK( ResolvedDate__c) 
)</errorConditionFormula>
        <errorDisplayField>ResolvedDate__c</errorDisplayField>
        <errorMessage>Please enter the date the field concern was resolved.</errorMessage>
    </validationRules>
</CustomObject>